js per noob dovrebbe andare

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,10 @@ h1 {
     padding-bottom: 2rem;
 }
 
-.clicked.bomb {
+.clicked.mine {
     background-color: tomato;
 }
 
+.end.mine {
+    background-color: tomato;
+}
